; ModuleID = '/home/carl/AnghaBench/postgres/contrib/fuzzystrmatch/extr_fuzzystrmatch.c_soundex_code.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/fuzzystrmatch/extr_fuzzystrmatch.c_soundex_code.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@soundex_table = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (i8)* @soundex_code to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal signext i8 @soundex_code(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  store i8 %0, i8* %3, align 1
  %4 = load i8, i8* %3, align 1
  %5 = call signext i8 @toupper(i8 zeroext %4)
  store i8 %5, i8* %3, align 1
  %6 = load i8, i8* %3, align 1
  %7 = sext i8 %6 to i32
  %8 = icmp sge i32 %7, 65
  br i1 %8, label %9, label %21

9:                                                ; preds = %1
  %10 = load i8, i8* %3, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp sle i32 %11, 90
  br i1 %12, label %13, label %21

13:                                               ; preds = %9
  %14 = load i8*, i8** @soundex_table, align 8
  %15 = load i8, i8* %3, align 1
  %16 = sext i8 %15 to i32
  %17 = sub nsw i32 %16, 65
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i8, i8* %14, i64 %18
  %20 = load i8, i8* %19, align 1
  store i8 %20, i8* %2, align 1
  br label %23

21:                                               ; preds = %9, %1
  %22 = load i8, i8* %3, align 1
  store i8 %22, i8* %2, align 1
  br label %23

23:                                               ; preds = %21, %13
  %24 = load i8, i8* %2, align 1
  ret i8 %24
}

declare dso_local signext i8 @toupper(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
